# BSCA

./: .gitignore  ARCHITECTURE.txt  CMakeLists.txt  README.md  SCALE_GUIDE.txt
src/: prepare_npass.cpp
src/npass/: npass_index.hpp
